--- a/helpingchat/app/views/messages/index.html.erb
+++ b/helpingchat/app/views/messages/index.html.erb
@@ -5,7 +5,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Friendly Chat
+                        Helping Chat
                     </a>
                 </li>
                 <li>
