--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -7,6 +7,197 @@
 	max-width: 400px;
 	text-align: center;
 }
+.container
+{
+    width:100%;
+    height:100%;
+
+    padding-left: 0px;
+}
+body
+{
+    background-color: #4dc9ff;
+}
+#yourinfo
+{
+    color:#fff;
+}
+#theirinfo
+{
+    color:#333;
+}
+.collapse
+{
+    margin-bottom: -4px;
+}
+.Title a:hover
+{
+    background-color: #FF0000;
+}
+.Title a:hover
+{
+    color:#fff;
+}
+.Head1 a:hover
+{
+    background-color: #ff7f00;
+}
+.Head1 a:hover
+{
+    color: #fff;
+}
+
+.Head2 a:hover
+{
+    background-color: #ffff00;
+}
+.Head2 a:hover
+{
+    color: #333;
+}
+
+.Head3 a:hover
+{
+    background-color: #00ff00;
+}
+.Head3 a:hover
+{
+    color: #333;
+}
+
+.Head4 a:hover
+{
+    background-color: #0000ff;
+}
+.Head4 a:hover
+{
+    color: #fff;
+}
+
+.Head5 a:hover
+{
+    background-color: #4B0082;
+}
+.Head5 a:hover
+{
+    color: #fff;
+}
+
+.Head6 a:hover
+{
+    background-color: #8F00ff;
+}
+.Head6 a:hover
+{
+    color: #fff;
+}
+
+
+
+
+
+
+
+
+.Title
+{
+    background-color: #d5544f;
+}
+.Title a
+{
+    color:#333;
+}
+
+.Head1
+{
+    background-color: #d5544f;
+}
+.Head1 a
+{
+    color: #333;
+}
+
+.Head2
+{
+    background-color: #d5544f;
+}
+.Head2 a
+{
+    color: #333;
+}
+
+.Head3
+{
+    background-color: #d5544f;
+}
+.Head3 a
+{
+    color: #333;
+}
+
+.Head4
+{
+    background-color: #d5544f;
+}
+.Head4 a
+{
+    color: #333;
+}
+
+.Head5
+{
+    background-color: #d5544f;
+}
+.Head5 a
+{
+    color: #333;
+}
+
+.Head6
+{
+    background-color: #d5544f;
+}
+.Head6 a
+{
+    color: #333;
+}
+.panel-body
+{
+    overflow:auto;
+    max-height: 500px;
+}
+.message_input
+{
+    width: 84%;
+}
+.message_button
+{
+    width: 14%;
+}
+.chat-panel
+{    max-width: 900px;
+    margin: 0 auto;
+    float:none;
+}
+.footer_inner
+{
+    margin: 0 auto;
+    float:none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #wrapper {
     padding-left: 0;
     -webkit-transition: all 0.5s ease;
@@ -27,7 +218,7 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+    background: #4dc9ff;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -68,13 +259,10 @@
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #999999;
 }
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
 }
 
 .sidebar-nav li a:active,
@@ -88,16 +276,21 @@
     line-height: 60px;
 }
 
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
 
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-}
 
 @media(min-width:768px) {
+    .message_input
+{
+    width: 90%;
+}
+.message_button
+{
+    width: 50px;
+}
+    .container
+    {
+    padding-left: 220px;
+    }
     #wrapper {
         padding-left: 250px;
     }
