--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,31 @@
 <%= subscribe_to @roomaddress %>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <%= javascript_include_tag "http://localhost:9292/faye.js" %>
+<!-- Nav bar -->
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+  <div class = "navbar-header">
+    <p class = "navbar-brand"> Helping Chat </p>
+  </div>
+  <ul class = "nav nav-pills navbar-nav">
+      <li class="nav-link" >
+        <a href="#" class = "nav-link">Other Places for Help</a>
+      </li>
+       <li role="presentation" class="dropdown nav-link">
+          <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            Rules <span class="caret"></span>
+          </a>
+          <ol class="dropdown-menu" role="menu">
+            <li>Be Repestfull!</li>
+          </ol>
+  </li>
+      <li class="nav-link">
+        <a href="#">About Us</a>
+      </li>
+    </ul>
+</div>
+
+</nav>
 <!-- Main_Page -->
 <ins class="adsbygoogle"
      style="display:block; width:80%;float:right;height:90px;"
