--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,99 +4,80 @@
 <!-- Nav bar -->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
-  <div class = "navbar-header">
-    <p class = "navbar-brand"> Helping Chat </p>
-  </div>
-  <ul class = "nav nav-pills navbar-nav">
+    <div class = "navbar-header">
+      <p class = "navbar-brand"> Helping Chat </p>
+    </div>
+    <ul class = "nav nav-pills navbar-nav">
       <li class="nav-link" >
         <a href="#" class = "nav-link">Other Places for Help</a>
       </li>
-       <li role="presentation" class="dropdown nav-link">
-          <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            Rules <span class="caret"></span>
-          </a>
-          <ol class="dropdown-menu" role="menu">
-            <li>Be Repestfull!</li>
-          </ol>
-  </li>
+      <li role="presentation" class="dropdown nav-link">
+        <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+          Rules <span class="caret"></span>
+        </a>
+        <ol class="dropdown-menu" role="menu">
+          <li>Be Respectfull</li>
+          <li>No asking for personal infomation</li>
+        </ol>
+      </li>
+
+      <li role="presentation" class="dropdown nav-link">
+        <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-expanded="false"> Starting Questions <span class="caret"></span>
+        </a>
+        <ol class="dropdown-menu" role="menu">
+          <li>Be Respectfull</li>
+          <li>No asking for personal infomation</li>
+        </ol>
+      </li>
       <li class="nav-link">
         <a href="#">About Us</a>
       </li>
     </ul>
-</div>
+  </div>
 
 </nav>
 <!-- Main_Page -->
 <ins class="adsbygoogle"
-     style="display:block; width:80%;float:right;height:90px;"
-     data-ad-client="ca-pub-2049126681125303"
-     data-ad-slot="9104544471"
-     data-ad-format="auto"></ins>
+style="display:block; width:80%;float:right;height:90px;"
+data-ad-client="ca-pub-2049126681125303"
+data-ad-slot="9104544471"
+data-ad-format="auto"></ins>
 <script>
-(adsbygoogle = window.adsbygoogle || []).push({});
+  (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <script type="text/javascript" charset="utf-8">
   PrivatePub.subscribe("<%= @roomaddress %>", function(data) {
     $('<li></li>').html(data.username + ": " + data.msg).appendTo('#chat');
   });
+  window.onbeforeunload = function()
+  {
+
+  }
 
 </script>
-<div class="container">
-<!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand Title heads">
-                    <a href="#">
-                        Helping Chat
-                    </a>
-                </li>
-                <li class="Head1 heads">
-                    <a data-toggle="collapse" data-target="#yourinfo"href="#">Your info</a>
-                    <p class="collapse" id="yourinfo">
-                        This is where your info will be! </p>
-                </li>
-                <li class="Head2 heads">
-                    <a data-toggle="collapse" data-target="#theirinfo"href="#">Their info</a>
-                    <p class="collapse" id="theirinfo">
-                        This is where their info will be! </p>
-                </li>
-                <li class="Head3 heads">
-                    <a href="#">Helplines</a>
-                </li>
-                <li class="Head4 heads">
-                    <a href="#">Rules</a>
-                </li>
-                 <li class="Head5 heads">
-                    <a href="#">Other Website to help</a>
-                </li>
-                <li class="Head6 heads">
-                    <a href="#">About us</a>
-                </li>
-            </ul>
-        </div>
 <!-- /#sidebar-wrapper -->
 
-	<div class="panel panel-default chat-panel">
-	  <div class="panel-heading">Your Chat:</div>
-	  <div class="panel-body">
-	    <ul id="chat">
-        <li>
-          <p>User id is <%= @user_id %> </p>
-        </li>
-        <li>
-          <p>Room id is <%= @roomaddress %> </p>
-        </li>
-        <%= @output%>
-        <%= @error%>
-		  </ul>
-	  </div>
-      <div class="panel-footer">
-          <div class= "footer_inner center">
-              <%= form_tag new_message_path, :remote => true do %>
-                <%= text_field_tag :message %>
-                <%= submit_tag "Send" %>
-              <% end %>
-          </div>
-      </div>
-	</div>
+<div class="panel panel-default chat-panel">
+ <div class="panel-heading">Your Chat:</div>
+ <div class="panel-body">
+   <ul id="chat">
+    <li>
+      <p>User id is <%= @user_id %> </p>
+    </li>
+    <li>
+      <p>Room id is <%= @roomaddress %> </p>
+    </li>
+    <%= @output%>
+    <%= @error%>
+  </ul>
+</div>
+<div class="panel-footer">
+  <div class= "footer_inner center">
+    <%= form_tag new_message_path, :remote => true do %>
+    <%= text_field_tag :message %>
+    <%= submit_tag "Send" %>
+    <% end %>
+  </div>
+</div>
+</div>
 </div>
