--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,45 +6,46 @@
   <div class="container">
     <div class = "navbar-header">
       <p class = "navbar-brand"> Helping Chat </p>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainnav" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+    </button>
     </div>
-    <ul class = "nav nav-pills navbar-nav">
-      <li class="nav-link" >
-        <a href="#" class = "nav-link">Other Places for Help</a>
-      </li>
-      <li role="presentation" class="dropdown nav-link">
-        <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-          Rules <span class="caret"></span>
-        </a>
-        <ol class="dropdown-menu" role="menu">
-          <li>Be Respectfull</li>
-          <li>No asking for personal infomation</li>
-        </ol>
-      </li>
 
-      <li role="presentation" class="dropdown nav-link">
-        <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-expanded="false"> Starting Questions <span class="caret"></span>
-        </a>
-        <ol class="dropdown-menu" role="menu">
-          <li>Be Respectfull</li>
-          <li>No asking for personal infomation</li>
-        </ol>
+    <div class="collapse navbar-collapse" id="mainnav">
+    <ul class = "nav nav-pills navbar-nav">
+      <li class="nav-link">
+        <a data-toggle="modal" class="nav-link" data-target="#placeshelp">Other Places for Help</a>
       </li>
       <li class="nav-link">
-        <a href="#">About Us</a>
+        <a data-toggle="modal" class="nav-link" data-target="#rules">Rules</a>
+      </li>
+      <li class="nav-link">
+        <a data-toggle="modal" class="nav-link" data-target="#startingquestions">Starting Questions</a>
+      </li>
+
+      <li class="nav-link">
+        <a data-toggle="modal" class="nav-link" data-target="#aboutmodel">About Us</a>
       </li>
     </ul>
-  </div>
+      <ul class = "nav nav-pills navbar-nav navbar-right">
+        <li role="presentation" class="dropdown nav-link">
 
+        <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-expanded="false"> Person names <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu" role="menu">
+           <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Change your name</a></li>
+        </ul>
+      </li>
+      </ul>
+    </div>
+  </div>
 </nav>
 <!-- Main_Page -->
-<ins class="adsbygoogle"
-style="display:block; width:80%;float:right;height:90px;"
-data-ad-client="ca-pub-2049126681125303"
-data-ad-slot="9104544471"
-data-ad-format="auto"></ins>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<!-- Desktop side -->
+
 <script type="text/javascript" charset="utf-8">
   PrivatePub.subscribe("<%= @roomaddress %>", function(data) {
     if(data.username == "Helpingcompchat")
@@ -62,14 +63,21 @@ data-ad-format="auto"></ins>
       $('<li></li>').html(data.username + ": " + data.msg).appendTo('#chat');
     }
   });
-  window.onbeforeunload = function()
-  {
+$(window).unload(function(){
+    $.ajax({
+        url: '/userleft',
+        type: 'POST',
+        dataType: 'json',
+        data: settings,
+        cache: true,
+        success: function (data) {}
 
-  }
+    });
+});
 
 </script>
 <!-- /#sidebar-wrapper -->
-
+<div class="maincontainer">
 <div class="panel panel-default chat-panel">
  <div class="panel-heading">Your Chat:</div>
  <div class="panel-body">
@@ -93,4 +101,75 @@ data-ad-format="auto"></ins>
   </div>
 </div>
 </div>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Panel bottom -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-2049126681125303"
+     data-ad-slot="1243058876"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+
+
+
+
+<!-- About Us -->
+<div class="modal fade" id="aboutmodel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">About Us</h4>
+      </div>
+      <div class="modal-body">
+        <p>We are here</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Starting Questions -->
+<div class="modal fade" id="startingquestions" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Starting Questions</h4>
+      </div>
+      <div class="modal-body">
+        <p>We are here</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--Other places to help -->
+<div class="modal fade" id="placeshelp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Other places to get help</h4>
+      </div>
+      <div class="modal-body">
+        <p>We are here</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!--Rules -->
+<div class="modal fade" id="rules" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Rules</h4>
+      </div>
+      <div class="modal-body">
+        <p>We are here</p>
+      </div>
+    </div>
+  </div>
 </div>
