--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -93,26 +93,6 @@
     </div>
   </div>
 </div>
-<div class="modal fade" id="aboutmodel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">About Us</h4>
-      </div>
-      <div class="modal-body">
-        <p>
-          Hello and Welcome to Helping Chat! This website is here to help anyone that is dealing with an issue in their life. Its a simple anonmiouns chat program that allows you to talk to a random person that has an issue and you will work out both your issues together in a place where you can not be judged or anyone know who you are.
-        </p>
-        <br>
-        <p>You can find me on twitter here: <a href="https://www.twitter.com/robertwilman" "email me">@Robertwildman</a>
-          <br>
-          You can email me at robertwildman@helpingchat.com .
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Panel bottom -->
 <ins class="adsbygoogle"
@@ -208,6 +188,7 @@ data-ad-slot="1243058876"></ins>
     </div>
   </div>
 </div>
+
 <!--Changing name -->
 <div class="modal fade" id="changename" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -218,7 +199,28 @@ data-ad-slot="1243058876"></ins>
       </div>
       <div class="modal-body">
         <p>Your current name is: <%= @name %> </p>
+        <!-- This sends a form away to the controller for changing name -->
+        <%= form_tag(changename_path, method: "Post", :remote => true) do %>
+          <div class = "form-group">
+            <%= text_field_tag :name,@name,:placeholder => "Enter Name",:class => 'form-control'%>
+          </div>
+          <%= submit_tag "Change Name", :onclick => "return validateform()",:class => 'btn btn-lg btn-block btn-default namechange-button add-topic-btn',:id => "namechange-button"%>
+
+        <% end %>
       </div>
     </div>
   </div>
 </div>
+
+<script src="/javascripts/application.js" type="text/javascript" charset="utf-8">
+$(document).ready();
+alert("egre");
+function validateForm()
+{
+  alert("gre");
+}
+$('#namechange-button"').click(function(){
+    alert("Name Changed");
+});
+</script>
+
